# FlowKit

./: README.md  pyproject.toml
flowkit/_models/: gate_node.py  gating_results.py  gating_strategy.py  sample.py  session.py  workspace.py
flowkit/_models/gates/: __init__.py  _base_gate.py  _dict_gates.py  _gates.py  _gml_gates.py
flowkit/_utils/: gating_utils.py  xml_utils.py
flowkit/tests/: __init__.py
