[tool.poetry]
name = "flowkit"
version = "0.1.0"
description = "FlowKit is a Python toolkit for flow cytometry analysis and visualization"
authors = ["Scott White"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flowutils = {git = "https://github.com/krystianMoras/FlowUtils.git"}
flowio = {git = "https://github.com/krystianMoras/FlowIO.git"}
lxml = "^4.9.3"
networkx = "^3.2.1"
numpy = "^1.26.3"
pandas = "^2.1.2"
scipy = "^1.11.3"
anytree = "^2.12.0"
psutil = "^5.9.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
